# humanize-chat

./: .gitignore  2026-04-03-humanize-design.md  README.md  main.py  pyproject.toml
docs/: prompt-hints.md
humanize/: __init__.py
humanize/adapters/: __init__.py  base.py  generic.py
humanize/core/: __init__.py  events.py  persona.py
humanize/pipeline/: __init__.py  splitter.py  style.py
humanize_chat/: __init__.py
humanize_chat/adapters/: base.py  generic.py
humanize_chat/core/: __init__.py  clock.py  events.py  intent.py  persona.py  state.py
humanize_chat/pipeline/: __init__.py  splitter.py  timing.py
